--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,15 +6,12 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
   font-weight: normal;
 }
 
-a,
-.green {
+a{
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: black;
   transition: 0.4s;
   padding: 3px;
 }
