--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,8 +1,6 @@
 html,
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
